--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
 
                 <!---------- User options ----------->
                 <div class="main-nav__btns">
-                    <button class="main-nav__btn main-nav__btn--login"><i class="fa fa-user"
-                            aria-hidden="true"></i></button>
-                    <button class="main-nav__btn main-nav__btn--cart"><i class="fa fa-shopping-cart"
-                            aria-hidden="true"></i></button>
+                    <button class="main-nav__btn main-nav__btn--login"><i class="main-nav__icon fa fa-user"
+                            aria-hidden="true"></i>
+                        Login</button>
+                    <button class="main-nav__btn main-nav__btn--cart"><i class="main-nav__icon fa fa-shopping-cart"
+                            aria-hidden="true"></i> Cart</button>
                 </div>
                 <!----------------------------------->
             </div>
@@ -220,7 +221,7 @@
         <!----------------------------------->
 
         <!--------- Menu section ---------->
-        <section id="menu" class="drinks">
+        <section id="menu" class="menu">
             <div class="section-title-container">
                 <!---------- Drinks title ----------->
                 <h3 class="section-title">Wanna try our most <span class="highlight-three">delicious</span>
@@ -228,47 +229,47 @@
                 <!----------------------------------->
             </div>
 
-            <div class="drinks-content">
+            <div class="menu__content">
                 <!---------- Drinks list ------------>
-                <ul class="drinks-list">
-                    <li class="drink">
+                <ul class="menu__list">
+                    <li class="menu__card">
                         <img src="./assets/imgs/americano.png" alt="Americano coffee drink.">
-                        <h3 class="drink-title">Americano</h3>
+                        <h3 class="menu__card-title">Americano</h3>
                     </li>
 
-                    <li class="drink">
+                    <li class="menu__card">
                         <img src="./assets/imgs/latte.png" alt="Latte coffee drink.">
-                        <h3 class="drink-title">Latte</h3>
+                        <h3 class="menu__card-title">Latte</h3>
                     </li>
 
-                    <li class="drink">
+                    <li class="menu__card">
                         <img src="./assets/imgs/coffee-machiatto.png" alt="Macchiato coffee drink.">
-                        <h3 class="drink-title">Macchiato</h3>
+                        <h3 class="menu__card-title">Macchiato</h3>
                     </li>
 
-                    <li class="drink">
+                    <li class="menu__card">
                         <img src="./assets/imgs/lungo.png" alt="Lungo coffee drink.">
-                        <h3 class="drink-title">Lungo</h3>
+                        <h3 class="menu__card-title">Lungo</h3>
                     </li>
 
-                    <li class="drink">
+                    <li class="menu__card">
                         <img src="./assets/imgs/doppio.jpg" alt="Doppio coffee drink.">
-                        <h3 class="drink-title">Doppio</h3>
+                        <h3 class="menu__card-title">Doppio</h3>
                     </li>
 
-                    <li class="drink">
+                    <li class="menu__card">
                         <img src="./assets/imgs/mocha.jpg" alt="Mocha coffee drink.">
-                        <h3 class="drink-title">Mocha</h3>
+                        <h3 class="menu__card-title">Mocha</h3>
                     </li>
 
-                    <li class="drink">
+                    <li class="menu__card">
                         <img src="./assets/imgs/cappuccino.png" alt="Cappuccino coffee drink.">
-                        <h3 class="drink-title">Cappuccino</h3>
+                        <h3 class="menu__card-title">Cappuccino</h3>
                     </li>
 
-                    <li class="drink">
+                    <li class="menu__card">
                         <img src="./assets/imgs/affogato.jpg" alt="Cappuccino coffee drink.">
-                        <h3 class="drink-title">Affogato</h3>
+                        <h3 class="menu__card-title">Affogato</h3>
                     </li>
                 </ul>
                 <!----------------------------------->
