Small accessibility adjustments

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <link rel="stylesheet" href="./CSS/sections/controls.css">
     <link rel="stylesheet" href="./CSS/sections/footer.css">
 
-    <link rel="stylesheet" href="./CSS/utils/utility-classes.css">
+    <link rel="stylesheet" href="./CSS/utils/buttons.css">
+    <link rel="stylesheet" href="./CSS/utils/misc.css">
     <!----------------------------------->
 
     <!----------- JavaScript ------------>
@@ -222,7 +223,7 @@
 
         <!--------- Menu section ---------->
         <section id="menu" class="menu">
-            <div class="section-title-container">
+            <div class="section-title-wrapper">
                 <!---------- Drinks title ----------->
                 <h3 class="section-title">Wanna try our most <span class="highlight-three">delicious</span>
                     drinks?</h3>
@@ -279,7 +280,7 @@
 
         <!----- Special drinks section ------>
         <section class="special-drinks">
-            <div class="section-title-container">
+            <div class="section-title-wrapper">
                 <!------- Special rinks title ------->
                 <h3 class="section-title">These are <span class="highlight-three special-one">exclusively</span> for
                     <span class="highlight-three special-one">you</span>!
@@ -423,7 +424,7 @@
 
         <!---------- Plans section ---------->
         <section class="plans-section">
-            <div class="section-title-container">
+            <div class="section-title-wrapper">
                 <!--------- Plans section title ---------->
                 <h2 class="section-title">Join us today to enjoy <span class="highlight-three">the best</span> coffee
                     experience!</span></h2>
