Implemented navbar scroll functionality

--- a/index.html
+++ b/index.html
@@ -75,25 +75,28 @@
                 <!--------- Navigation list --------->
                 <ul class="main-nav__list">
                     <li class="current main-nav__list-item">
-                        <a class="current main-nav__link" href="#home" aria-current="page" aria-label="Homepage">
+                        <a class="current main-nav__link" href="#home" aria-current="page"
+                            aria-label="link to scroll to the home section">
                             <i class="main-nav__icon fa fa-home" aria-hidden="true"></i>Home
                         </a>
                     </li>
 
                     <li class="main-nav__list-item">
-                        <a class="main-nav__link" href="#menu" aria-label="Drinks menu page">
+                        <a class="main-nav__link" href="#menu" aria-label="link to scroll to the menu section">
                             <i class="main-nav__icon fa fa-cutlery" aria-hidden="true"></i>Menu
                         </a>
                     </li>
 
                     <li class="main-nav__list-item">
-                        <a class="main-nav__link" href="#" aria-label="About page">
+                        <a class="main-nav__link" href="#special-drinks"
+                            aria-label="link to scroll to the special drinks section">
                             <i class="main-nav__icon fa fa-coffee" aria-hidden="true"></i>Special drinks
                         </a>
                     </li class="main-nav__list-item">
 
                     <li class="main-nav__list-item main-nav__list-item--plans">
-                        <a class="main-nav__link main-nav__link--plans" href="#" aria-label="Plans page">
+                        <a class="main-nav__link main-nav__link--plans" href="#plans-section"
+                            aria-label="link to scroll to the plans section">
                             <i class="main-nav__icon main-nav__icon--plans fa fa-gem" aria-hidden="true"></i>Plans
                         </a>
                     </li>
@@ -279,7 +282,7 @@
         <!----------------------------------->
 
         <!----- Special drinks section ------>
-        <section class="special-drinks">
+        <section class="special-drinks" id="special-drinks">
             <div class="section-title-wrapper">
                 <!------- Special rinks title ------->
                 <h3 class="section-title">These are <span class="highlight-three special-one">exclusively</span> for
@@ -299,7 +302,7 @@
 
                     <div class="slide-description-container">
                         <!---------- Slide title ------------>
-                        <h3 class="slide-title special-one"><i class="fa fa-diamond"></i> Blueberry Bliss</h3>
+                        <h3 class="slide-title special-one"><i class="fa fa-gem"></i> Blueberry Bliss</h3>
                         <!----------------------------------->
 
                         <!------- Slide description --------->
@@ -423,7 +426,7 @@
         <!----------------------------------->
 
         <!---------- Plans section ---------->
-        <section class="plans-section">
+        <section class="plans-section" id="plans-section">
             <div class="section-title-wrapper">
                 <!--------- Plans section title ---------->
                 <h2 class="section-title">Join us today to enjoy <span class="highlight-three">the best</span> coffee
