--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <!----------------------------------->
 
                     <!---------- Website title ---------->
-                    <h1><a href="#home" class="main-nav__title">The Coffee Shop</a></h1>
+                    <h1><a class="main-nav__title">The Coffee Shop</a></h1>
                     <!----------------------------------->
                 </ul>
                 <!----------------------------------->
