--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
     <!----------------------------------->
 
     <!---- Scrolling control section ---->
-    <section class="controls">
+    <section id="#controls" class="controls">
         <!-------- Scroll top button -------->
         <button data-action="top" class="controls__scroll-btn action-button" title="Go to top"
             aria-label="Go to the top of the page">
