Added button to expand and collapse the navbar

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <body>
     <!------------- Header -------------->
-    <header>
+    <header class="expanded">
         <!--------- Main navigation --------->
         <nav class="main-nav" aria-label="primary navigation">
             <!-------- Navigation wrapper --------->
@@ -114,6 +114,12 @@
             </div>
             <!----------------------------------->
         </nav>
+        <!----------------------------------->
+
+        <!------ Expand navbar button ------->
+        <button id="js-expand-navbar" class="expand-navbar collapse" aria-hidden="true" title="Show/hide navbar">
+            <i class="fa fa-chevron-up"></i>
+        </button>
         <!----------------------------------->
     </header>
     <!----------------------------------->
