Added a lock navbar functionality

--- a/index.html
+++ b/index.html
@@ -117,9 +117,16 @@
         <!----------------------------------->
 
         <!------ Expand navbar button ------->
-        <button id="js-expand-navbar" class="expand-navbar collapse" aria-hidden="true" title="Show/hide navbar">
-            <i class="fa fa-chevron-up"></i>
-        </button>
+        <div class="main-nav-controls">
+            <button id="js-expand-navbar" class="main-nav-controls__btn expand-navbar collapse" aria-hidden="true"
+                title="Show/hide menu">
+                <i class="fa fa-chevron-up"></i>
+            </button>
+
+            <button id="js-lock-navbar" class="main-nav-controls__btn" title="Lock current menu state">
+                <i class="fa fa-unlock"></i>
+            </button>
+        </div>
         <!----------------------------------->
     </header>
     <!----------------------------------->
