--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </button>
 
             <button id="js-lock-navbar" class="main-nav-controls__btn" title="Lock current menu state">
-                <i class="fa fa-unlock"></i>
+                <i class="fa fa-lock-open"></i>
             </button>
         </div>
         <!----------------------------------->
